--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="resumo_verbal">
                 <div>
                     <img src="./images/icon-verbal.svg" alt="ícone verbal">
-                    <span>Reação</span>                    
+                    <span>Verbal</span>                    
                 </div>
             
 
